force-app/main/default/objects/Drug__c/Drug__c.object-meta.xml
<CustomObject>
    <label>Drug</label>
    <pluralLabel>Drugs</pluralLabel>
    <nameField>
        <label>Drug Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>