force-app/main/default/objects/Drug__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName><label>Active</label><type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>