force-app/main/default/objects/Drug__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <label>Brand Name</label>
    <type>Text</type>
    <length>255</length><required>true</required>
</CustomField>