force-app/main/default/objects/Drug__c/fields/Dosage_Form__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Form__c</fullName><label>Dosage Form</label><type>Text</type>
    <length>100</length><required>false</required>
<externalId>false</externalId>
</CustomField>