force-app/main/default/objects/Drug__c/fields/Generic_Name__c.field-meta.xml
<CustomField>
    <fullName>Generic_Name__c</fullName>
    <label>Generic Name</label>
    <type>Text</type>
    <length>255</length><required>false</required>
</CustomField>