force-app/main/default/objects/Drug__c/fields/NDC_Code__c.field-meta.xml
<CustomField>
    <fullName>NDC_Code__c</fullName>
    <label>NDC Code</label>
    <type>Text</type>
    <length>50</length><unique>true</unique><externalId>true</externalId>
</CustomField>