force-app/main/default/objects/Drug__c/fields/REMS_Flag__c.field-meta.xml
<CustomField>
    <fullName>REMS_Flag__c</fullName>
    <label>REMS Flag</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>