force-app/main/default/objects/Drug__c/fields/Route_of_Administration__c.field-meta.xml
<CustomField>
    <fullName>Route_of_Administration__c</fullName>
    <label>Route of Administration</label>
    <type>Text</type>
    <length>100</length>
</CustomField>