force-app/main/default/objects/Drug__c/fields/Storage_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Storage_Requirements__c</fullName><label>Storage Requirements</label><type>TextArea</type>
</CustomField>