force-app/main/default/objects/Drug__c/fields/Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area__c</fullName><label>Therapeutic Area</label><type>Text</type>
    <length>255</length><required>false</required>
<externalId>false</externalId>
</CustomField>